<resources>
    <string name="app_name">Astro</string>
    <string name="subtitle">Your Personal Smart Assistant</string>

    <string name="beranda">Beranda</string>
    <string name="petunjuk">Petunjuk</string>
    <string name="jadwal">Jadwal</string>
    <string name="profil">Profil</string>

    <string name="location_pin">Mencari lokasi rumah sakit terdekat</string>
    <string name="no_records_found">Tidak ada jadwal yang ditemukan</string>

    <string name="toolbar_dummy">toolbar</string>

    <string name="public_button">public button</string>
    <string name="makan">Makan</string>

    <string name="dummy_sad">Kamu belum punya jadwal. Ayo buat jadwal</string>
    <string name="dummy_sad_aktivitas">Pasien belum memiliki aktivitas untuk hari ini</string>
    <string name="dummy_title_article">Cari Tahu Apa Itu Penyakit Stroke</string>
    <string name="dummy_title_jadwal">Kontrol Dokter Sahrial</string>
    <string name="dummy_address">Kimia Farma, Jalan Stasiun Kediri</string>
    <string name="dummy_hari">Rabu</string>
    <string name="dummy_jam">10:10</string>
    <string name="dummy_tanggal">10 Juni 2021</string>

    <string name="tambah">Tambah</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="lokasi">Lokasi</string>
    <string name="tanggal">Tanggal</string>
    <string name="pilih_jam">Pilih Jam</string>

    <string name="selamat_datang">Selamat Datang</string>
    <string name="jadwal_kamu">Jadwal Kamu</string>
    <string name="riwayat_aktivitas">Riwayat Aktivitas</string>
    <string name="riwayat_jatuh">Riwayat Jatuh</string>
    <string name="status_aktivitas">Status Aktivitas</string>
    <string name="artikel_buat_kamu">Artikel Buat Kamu</string>

    <string name="status_aman_caption">Pasien dalam keadaan aman</string>
    <string name="status_aman_subcaption">Tidak ada bahaya terdeteksi</string>
    <string name="status_bahaya_caption">Pasien dalam bahaya</string>
    <string name="status_bahaya_subcaption">Ketuk untuk mengetahui informasi lebih lanjut</string>
    <string name="tidak_ada_bahaya_terdeteksi">Tidak ada bahaya terdeteksi</string>
    <string name="bahaya_terdeksi">Bahaya terdeteksi oleh sensor</string>
    <string name="bahaya_terdeteksi_caption">Tekan tombol pada alat untuk mematikan alarm</string>
    <string name="lokasi_kamu">Lokasi Kamu</string>
    <string name="cari_rumah_sakit_terdekat">Cari Rumah Sakit Terdekat....</string>

    <string name="dummy_rumahsakit">Rumah Sakit Siloam Kebon Jeruk</string>
    <string name="dummy_rumahsakit_alamat">Jl. Perjuangan Kav.8, DKI Jakarta</string>
    <string name="dummy_rumahsakit_jarak">0.5 Km</string>

    <string name="nama_pasien">Nama Pasien</string>
    <string name="double_quote">:</string>
    <string name="dummy_nama_pasien">Alvin Kusuma</string>
    <string name="gender">Gender</string>
    <string name="dummy_laki_laki">Laki - laki</string>
    <string name="umur">Umur</string>
    <string name="dummy_umur">35 Tahun</string>
    <string name="jenis_stroke">Jenis Stroke</string>
    <string name="dummy_jenis_stroke">Stroke Iskemik</string>

    <string name="dummy_nama_user">Satrio Rahman Wicaksono</string>
    <string name="informasi_pasien">Informasi Pasien</string>
    <string name="aktivitas_pasien">Aktivitas Pasien</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="tentang_astro">Tentang Astro</string>

    <string name="jatuh_depan">Jatuh Depan</string>
    <string name="deskripsi_riwayat_jatuh">Riwayat jatuh ditampilkan berdasarkan aktivitas sensor yang terpasang pada pasien.</string>
    <string name="deskripsi_riwayat_aktivitas">Aktivitas yang ditampilkan berdasarkan Sign Language yang diinputkan pasien.</string>
    <string name="deskripsi_tentang_astro">Astro merupakan sebuah ekosistem realtime EWS yang  terdiri dari perangkat Sign Language Classification dan  piranti cerdas pendeteksi jatuh yang digunakan pasien. Kedua device tersebut terhubung dengan wifi dan dapat diakses realtime menggunakan smartphone.</string>
    <string name="dibalik_astro">Dibalik Astro</string>

    <string name="skip">Lewati</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="title_1">Astro dilengkapi dengan piranti cerdas berisi sensor yang dipasangkan ke tubuh pasien untuk memberikan sinyal bahaya apabila pasien dalam keadaan jatuh atau butuh pertolongan</string>
    <string name="title_2">ASTRO dilengkapi juga dengan Sign Language Classification yang membantu pasien Stroke Iskemik berkomunikasi dalam memenuhi kebutuhan seperti makan, minum, dan lain sebagainya.</string>
    <string name="title_3">Kedua perangkat tersebut dapat diakses secara Realtime di mobile menggunakan jaringan internet. Di ASTRO app kamu juga dapat menambahkan jadwal, melihat daftar rumah sakit, dan banyak hal penting lainnya. </string>

    <string name="nama_dosen">Dr. Eng Murman Dwi Prasetio,.S.T,. M.BA</string>
    <string name="dosen_job">Dosen Pembimbing</string>
    <string name="nama_ketua">Muhammad Rezki Ananda</string>
    <string name="ketua_job">Mobile Developer</string>
    <string name="nama_anggota_pertama">Satrio Rahman Wicaksono</string>
    <string name="anggota_pertama_job">Machine Learning Developer</string>
    <string name="nama_anggota_kedua">Abel Bima Wiratama</string>
    <string name="anggota_kedua_job">IoT Engineer</string>

    <string name="coming_soon">Kami Akan Hadir Untuk Anda</string>
    <string name="coming_soon_detail">Mohon maaf saat ini fitur petunjuk masih dalam tahap pengembangan</string>
    <string name="kontak_rumah_sakit">KontaK Rumah Sakit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>