<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/jadwal_bottomsheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_rounded_corner">

    <View
        android:layout_width="47dp"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/tambah"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_aktivitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/aktivitas"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_aktivitas"
        android:layout_width="337dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_rounded_grey"
        android:fontFamily="@font/open_sans_semibold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_aktivitas" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_lokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/lokasi"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_aktivitas" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_lokasi"
        android:layout_width="337dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_rounded_grey"
        android:fontFamily="@font/open_sans_semibold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lokasi" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_tanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/tanggal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lokasi" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:text="@string/pilih_jam"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lokasi" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tanggal" />

</androidx.constraintlayout.widget.ConstraintLayout>